--- a/lesson2/classwork2/main.css
+++ b/lesson2/classwork2/main.css
@@ -9,7 +9,7 @@ body {
     border-radius: 30px;
     margin: 4px auto;
     color: orange;
-
+    padding-bottom: 10px;
 }
 .targetB {
     width: 150px;
@@ -17,7 +17,7 @@ body {
     border: #419d90 3px solid;
     text-align: center;
     border-radius: 30px;
-    margin: 4px auto;
+    margin: 0px auto;
     color:#419d90 ;
 }
 .targetC {
@@ -26,7 +26,7 @@ body {
     border: deeppink 3px solid;
     text-align: center;
     border-radius: 30px;
-    margin: 4px auto;
+    margin: 0px auto;
     color: deeppink;
 }
 .targetD {
@@ -35,6 +35,6 @@ body {
     border:darkred  3px solid;
     text-align: center;
     border-radius: 30px;
-    margin: 4px auto;
+    margin: 0px auto;
     color:darkred ;
 }
